Presentation/Kubernetes/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 3000
  selector:
    app: azure-vote-back
