Presentation/Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
spec:
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 3000
  selector:
    app: azure-vote-back
